--- a/css/variables.css
+++ b/css/variables.css
@@ -13,6 +13,8 @@
     --font-size-table-header: 22px;
     --font-size-modal-title: 28px;
     --font-size-modal-button: 28px;
+   
+    --width-standard: 1440px;
   
     --primary-color: #2A7AE4;
     --secondary-color: #d6eaff;
