--- a/css/basicos/style_footer.css
+++ b/css/basicos/style_footer.css
@@ -40,7 +40,7 @@
   align-self: stretch;
   flex-grow: 0;
   margin: 0px 0px;
-  padding-left: 250px;
+  padding-left: 160px;
 
 }
 
@@ -74,4 +74,34 @@
     flex-grow: 0;
     margin: 25px 0px;
     margin-right: 40px;
+}
+
+.form-contacto{
+    width: 600px;
+}
+
+.copyright{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 32px;
+
+    position: static;
+    width: 1440px;
+    height: 102px;
+    left: 0px;
+    top: 368px;
+    font-family: var(--font-family-all);
+    /* Preto/branco */
+
+    background: #FFFFFF;
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 1;
+    align-self: stretch;
+    flex-grow: 0;
+    margin: 0px 0px;
 }
