--- a/css/variables.css
+++ b/css/variables.css
@@ -27,6 +27,8 @@
     --transparency-color: #4d4d4d33;
   
     --shadow: 0 5px 10px #55a6ff38;
+
+    --info-color: #df2525;
   }
   
   @media (min-width: 800px) {
